# Stitches

./: DeviceControl.cpp  Notify.cpp  ProcessCtx.cpp  ProcessCtx.hpp  ProcessProtectorEx.cpp  README_EN.md  Readme.md  RegistryProtector.cpp  Stitches.inf  Stitches.vcxproj  Stitches.vcxproj.filters
StitchesApi/: StitchesApi.cpp  StitchesApi.h  framework.h
TestApps/DirectSyscall/: Cargo.toml
TestApps/DirectSyscall/src/: main.rs  utils.rs
TestApps/ParentProcessIDSpoofing/: Cargo.toml
TestApps/ParentProcessIDSpoofing/src/: main.rs
