[package]
name = "ParentProcessIDSpoofing"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = { version = "0.38.0", features = ["windows"] }

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Memory",
]


